Update: UI & console log

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -252,8 +252,8 @@
     </div>
     <div class="card">
       <div>
-        <div class="numbers">4455</div>
-        <div class="card-name">Users</div>
+        <div class="numbers">$5000</div>
+        <div class="card-name">Payroll</div>
       </div>
       <div class="icon-box">
           <%- include("../partials/icons/users-icon.ejs"); -%>
