Debug:  eave date delete not working after sorting

--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -204,7 +204,7 @@
               <input
                 type="hidden"
                 class="leave-id delete-id"
-                value="<%= user.id %>"
+                value="<%= user.elId %>"
               />
               <a class="delete-data"
                 ><button class="delete-btn">Delete</button>
