Add: li for productivity  page

--- a/views/partials/side-nav.ejs
+++ b/views/partials/side-nav.ejs
@@ -33,6 +33,12 @@
         <span class="link-name"> Reports </span>
       </a>
     </li>
+    <li>
+      <a href="/productivity">
+        <%- include("./icons/reports-svg.ejs"); -%>
+        <span class="link-name"> Productivity </span>
+      </a>
+    </li>
 
     <li id="options-btn">
       <a href="/options">
