Update: content name

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -226,7 +226,7 @@
     <div class="card">
       <div>
         <div class="numbers"><%=totalUsers%></div>
-        <div class="card-name">Users</div>
+        <div class="card-name">Employees</div>
       </div>
         <div class="icon-box">
             <%- include("../partials/icons/users-icon.ejs"); -%>
@@ -235,7 +235,7 @@
     <div class="card">
       <div>
         <div class="numbers"><%=totalActive%></div>
-        <div class="card-name">Active Users</div>
+        <div class="card-name">Active Employees</div>
       </div>
       <div class="icon-box">
           <%- include("../partials/icons/active-user-icon.ejs"); -%>
@@ -244,7 +244,7 @@
     <div class="card">
       <div>
         <div class="numbers"><%=totalLeaveToDay%> </div>
-        <div class="card-name">Leave Users</div>
+        <div class="card-name">Leave Employees</div>
       </div>
       <div class="icon-box">
           <%- include("../partials/icons/leave-user-icon.ejs"); -%>
