--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -1,13 +1,13 @@
 <%- include("../partials/header"); -%>
 <div id="users">
   <div class="text-head">
-    <div class="text-title"><a href="<%=baseUrl%>/users">Users</a></div>
+    <div class="text-title"><a href="<%=baseUrl%>/users">Employees</a></div>
     <div class="add-button">
       <button class="add-btn">
         <span class="add-icon">
           <%- include("../partials/icons/add-svg"); -%>
         </span>
-        <span .add-btn-text>Add User</span>
+        <span .add-btn-text>Add Employee</span>
       </button>
     </div>
   </div>
