--- a/views/partials/add-user-modal.ejs
+++ b/views/partials/add-user-modal.ejs
@@ -1,7 +1,7 @@
 <div id="myModal" class="modal-container">
   <div class="modal">
     <div class="modal-head">
-      <div class="modal-title">Add User</div>
+      <div class="modal-title">Add Employee</div>
       <div class="modal-close"><%- include("./icons/close-svg"); -%></div>
     </div>
     <div class="modal-content">
