--- a/views/partials/side-nav.ejs
+++ b/views/partials/side-nav.ejs
@@ -23,7 +23,7 @@
     <li>
       <a href="/users">
         <%- include("./icons/users-svg.ejs"); -%>
-        <span class="link-name"> Users </span>
+        <span class="link-name"> Employees </span>
       </a>
     </li>
     <% } %>
