Add: for total payroll

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -252,7 +252,7 @@
     </div>
     <div class="card">
       <div>
-        <div class="numbers">$5000</div>
+        <div class="numbers"><%= sumPayroll %></div>
         <div class="card-name">Payroll</div>
       </div>
       <div class="icon-box">
