Fix: some issue

--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -360,7 +360,7 @@
         <h4>Missing date</h4>
         </div>
       <div>
-       <% if( userRole.user_role === 'admin') { %>
+       <% if( loggedInuser.userRole === 'admin') { %>
         <button  type="submit" id="automated-btn" class="missing-btn">Automated</button>
         <%} %>
         </div>
